# shrink-conflicts

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: unit.rs
