[package]
name = "shrink-conflicts"
description = "Tries to minimise diff3-style git conflicts"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Alex Sayers <alex@asayers.com>"]
license = "Unlicense"
repository = "https://github.com/asayers/shrink-conflicts"

[dependencies]
anyhow = "1.0.68"
bpaf = { version = "0.7.7", features = ["derive", "color"] }
memchr = "2.5.0"
